--- a/Demo101.ipynb
+++ b/Demo101.ipynb
@@ -30,9 +30,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10001, 23)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data = pd.read_csv(\"SimpleDataSetWithNewTarget.csv\")"
    ]
@@ -49,12 +60,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['artist_hotttnesss', 'duration', 'end_of_fade_in', 'key',\n",
+       "       'key_confidence', 'loudness', 'mode', 'mode_confidence',\n",
+       "       'start_of_fade_out', 'tempo', 'time_signature',\n",
+       "       'time_signature_confidence', 'year', 'bbhot'], dtype=object)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "drop_list = ['artist_location', 'artist_latitude', 'artist_longitude','artist_name', 'release', 'title' ,'song_hotttnesss', 'artist_id', 'artist_familiarity']\n",
-    "train = data.drop(drop_list, axis=1)"
+    "train = data.drop(drop_list, axis=1)\n",
+    "\n",
+    "#REMOVING MISMATCH IN TRAIN VS SPOTIFY DATA COLUMNS\n",
+    "#BBHOT\n",
+    "\n",
+    "# train.shape\n",
+    "train.columns.values"
    ]
   },
   {
@@ -112,10 +143,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Scores: [ 0.60839009  0.63056186  0.65168496  0.65913448  0.59440666  0.68347657\n",
-      "  0.60962047  0.5954082   0.64343422  0.61277693]\n",
-      "Mean: 0.628889443612\n",
-      "Standard Deviation: 0.0282660329737\n"
+      "Scores: [0.60614832 0.626958   0.639037   0.66406585 0.56349736 0.65568157\n",
+      " 0.60006295 0.58448669 0.62677057 0.60640756]\n",
+      "Mean: 0.6173115880858587\n",
+      "Standard Deviation: 0.02971062533697904\n"
      ]
     }
    ],
@@ -138,14 +169,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Probabily of being a hit song 0.36 vs spotify populartiy 73\n"
+      "Probabily of being a hit song 0.51 vs spotify populartiy 66\n"
      ]
     }
    ],
@@ -154,9 +185,14 @@
     "\n",
     "song3 = pd.DataFrame(ser_3).transpose()\n",
     "\n",
+    "#Train and Predictee need to have column names in the same order\n",
+    "#correctOrder ensures that the Training set and the song that's to be predicted have their columns in the correct order\n",
+    "correctOrder = train1.columns.values \n",
+    "song3 = song3[correctOrder]\n",
+    "\n",
     "prediction = xgb1.predict_proba(song3)\n",
     "\n",
-    "print(\"Probabily of being a hit song {:.2f} vs spotify populartiy {}\".format(prediction[0][1], popularity))"
+    "print(\"Probability of being a hit song {:.2f} vs spotify popularity {}\".format(prediction[0][1], popularity))"
    ]
   },
   {
@@ -677,9 +713,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Popularity-Predictor",
    "language": "python",
-   "name": "python3"
+   "name": "popularity-predictor"
   },
   "language_info": {
    "codemirror_mode": {
@@ -691,7 +727,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
