now works with python3 and added pipenv file

--- a/Demo101.ipynb
+++ b/Demo101.ipynb
@@ -79,13 +79,7 @@
    ],
    "source": [
     "drop_list = ['artist_location', 'artist_latitude', 'artist_longitude','artist_name', 'release', 'title' ,'song_hotttnesss', 'artist_id', 'artist_familiarity']\n",
-    "train = data.drop(drop_list, axis=1)\n",
-    "\n",
-    "#REMOVING MISMATCH IN TRAIN VS SPOTIFY DATA COLUMNS\n",
-    "#BBHOT\n",
-    "\n",
-    "# train.shape\n",
-    "train.columns.values"
+    "train = data.drop(drop_list, axis=1)"
    ]
   },
   {
