--- a/Demo101.ipynb
+++ b/Demo101.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
        "(10001,)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -139,19 +139,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Probability of being a hit song 0.51 vs spotify popularity 66\n"
+      "Predicted Hit Probability(according to our model): 50.88%\n",
+      "Actual Popularity (according to Spotify): 66\n"
      ]
     }
    ],
    "source": [
-    "ser_3, popularity = get_info(song_name='lift yourself', artist_name='kanye')\n",
+    "#Use XGBoost Model to predict whether a song will be a hit\n",
+    "\n",
+    "ser_3, popularity = helperFunctions.getSpotifyInfo(song_name='lift yourself', artist_name='kanye')\n",
     "\n",
     "song3 = pd.DataFrame(ser_3).transpose()\n",
     "\n",
@@ -159,7 +162,7 @@
     "\n",
     "prediction = xgb1.predict_proba(song3)\n",
     "\n",
-    "print(\"Probability of being a hit song {:.2f} vs spotify popularity {}\".format(prediction[0][1], popularity))"
+    "print(\"Predicted Hit Probability(according to our model): {:.2f}%\\nActual Popularity (according to Spotify): {}\".format(prediction[0][1]*100, popularity))"
    ]
   },
   {
