--- a/Demo101.ipynb
+++ b/Demo101.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
        "(10001,)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -139,22 +139,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted Hit Probability(according to our model): 50.88%\n",
-      "Actual Popularity (according to Spotify): 66\n"
+      "Predicted Hit Probability(according to our model): 37.31%\n",
+      "Actual Popularity (according to Spotify): 77\n"
      ]
     }
    ],
    "source": [
     "#Use XGBoost Model to predict whether a song will be a hit\n",
     "\n",
-    "ser_3, popularity = helperFunctions.getSpotifyInfo(song_name='lift yourself', artist_name='kanye')\n",
+    "ser_3, popularity = helperFunctions.getSpotifyInfo(song_name='lose yourself', artist_name='eminem')\n",
     "\n",
     "song3 = pd.DataFrame(ser_3).transpose()\n",
     "\n",
@@ -163,6 +163,99 @@
     "prediction = xgb1.predict_proba(song3)\n",
     "\n",
     "print(\"Predicted Hit Probability(according to our model): {:.2f}%\\nActual Popularity (according to Spotify): {}\".format(prediction[0][1]*100, popularity))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "blood on the leaves\n",
+      "Predicted Hit Probability(according to our model): 71.61%\n",
+      "Actual Popularity (according to Spotify): 65\n",
+      "\n",
+      "black dog\n",
+      "Predicted Hit Probability(according to our model): 60.14%\n",
+      "Actual Popularity (according to Spotify): 70\n",
+      "\n",
+      "funny girl\n",
+      "Predicted Hit Probability(according to our model): 11.61%\n",
+      "Actual Popularity (according to Spotify): 38\n",
+      "\n",
+      "thank u next\n",
+      "Predicted Hit Probability(according to our model): 58.06%\n",
+      "Actual Popularity (according to Spotify): 100\n",
+      "\n",
+      "papaoutai\n",
+      "Predicted Hit Probability(according to our model): 21.73%\n",
+      "Actual Popularity (according to Spotify): 55\n",
+      "\n",
+      "new slang\n",
+      "Predicted Hit Probability(according to our model): 18.39%\n",
+      "Actual Popularity (according to Spotify): 69\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Use XGBoost Model to predict whether a playlist will be a hit\n",
+    "playList = [('blood on the leaves','kanye'),\n",
+    "            ('black dog', 'led zeppelin'),\n",
+    "            ('funny girl', 'laura rizzotto'),\n",
+    "            ('thank u next', 'ariana grande'),\n",
+    "            ('papaoutai','stromae'),\n",
+    "            ('new slang','the shins')]\n",
+    "songPopularities = helperFunctions.getSpotifyInfoForLists(playList)\n",
+    "predictions = []\n",
+    "i=0\n",
+    "for ser4, pop in songPopularities:\n",
+    "    song4 = pd.DataFrame(ser4).transpose()\n",
+    "    song4 = helperFunctions.matchOrder(correctShape= train1,incorrectShape=song4)\n",
+    "    prediction2 = xgb1.predict_proba(song4)\n",
+    "    print(\"{}\\nPredicted Hit Probability(according to our model): {:.2f}%\\nActual Popularity (according to Spotify): {}\\n\".format(playList[i][0],prediction2[0][1]*100, pop))\n",
+    "    i+=1\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "list indices must be integers or slices, not str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-3520c8e7ea12>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0msongPopularities\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhelperFunctions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetSpotifyPlaylistInfo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mspotifyUri\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;31m# predictions = []\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m# i=0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Desktop/yhack 2018/Song-Popularity-Predictor/helperFunctions.py\u001b[0m in \u001b[0;36mgetSpotifyPlaylistInfo\u001b[0;34m(playlistID)\u001b[0m\n\u001b[1;32m     28\u001b[0m   \u001b[0mres\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrequests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'https://api.spotify.com/v1/playlists/%s/tracks'\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mplaylistID\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparams\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpayload\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mheaders\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mheaders\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m   \u001b[0mitems\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mres\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjson\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'items'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 30\u001b[0;31m   \u001b[0;32mfor\u001b[0m \u001b[0mtrack\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mitems\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'tracks'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     31\u001b[0m     \u001b[0mpprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrack\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrack\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'name'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: list indices must be integers or slices, not str"
+     ]
+    }
+   ],
+   "source": [
+    "#Use XGBoost Model to predict whether a playlist will be a hit\n",
+    "\n",
+    "#Get this from Spotify App > Right Click PLaylist > Share > SpotifyURI\n",
+    "spotifyUri = 'spotify:user:123862312:playlist:1JdWDyDMEUlUvl9oWfi4p1'.split(':')[-1]\n",
+    "\n",
+    "\n",
+    "print(helperFunctions.getSpotifyPlaylistInfo(spotifyUri))\n",
+    "# predictions = []\n",
+    "# i=0\n",
+    "# for ser4, pop in songPopularities:\n",
+    "#     song4 = pd.DataFrame(ser4).transpose()\n",
+    "#     song4 = helperFunctions.matchOrder(correctShape= train1,incorrectShape=song4)\n",
+    "#     prediction2 = xgb1.predict_proba(song4)\n",
+    "#     print(\"{}\\nPredicted Hit Probability(according to our model): {:.2f}%\\nActual Popularity (according to Spotify): {}\\n\".format(playList[i][0],prediction2[0][1]*100, pop))\n",
+    "#     i+=1\n",
+    "\n"
    ]
   },
   {
