--- a/Demo101.ipynb
+++ b/Demo101.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
        "(10001,)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
    "source": [
     "#Use XGBoost Model to predict whether a song will be a hit\n",
     "\n",
-    "ser_3, popularity = helperFunctions.getSpotifyInfo(song_name='lose yourself', artist_name='eminem')\n",
+    "ser_3, popularity = helperFunctions.getSpotifyTrackInfo(song_name='lose yourself', artist_name='eminem')\n",
     "\n",
     "song3 = pd.DataFrame(ser_3).transpose()\n",
     "\n",
@@ -223,19 +223,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "list indices must be integers or slices, not str",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-3520c8e7ea12>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0msongPopularities\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhelperFunctions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetSpotifyPlaylistInfo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mspotifyUri\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;31m# predictions = []\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m# i=0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Desktop/yhack 2018/Song-Popularity-Predictor/helperFunctions.py\u001b[0m in \u001b[0;36mgetSpotifyPlaylistInfo\u001b[0;34m(playlistID)\u001b[0m\n\u001b[1;32m     28\u001b[0m   \u001b[0mres\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrequests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'https://api.spotify.com/v1/playlists/%s/tracks'\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mplaylistID\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparams\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpayload\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mheaders\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mheaders\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m   \u001b[0mitems\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mres\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjson\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'items'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 30\u001b[0;31m   \u001b[0;32mfor\u001b[0m \u001b[0mtrack\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mitems\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'tracks'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     31\u001b[0m     \u001b[0mpprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrack\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrack\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'name'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: list indices must be integers or slices, not str"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['href', 'items', 'limit', 'next', 'offset', 'previous', 'total'])\n",
+      "[('Who Am I', ['Beenie Man'], 'spotify:track:4PaV16f3DUo9QxbQMUzMKH'), ('Stay So', ['Busy Signal'], 'spotify:track:5Qdbkemkdk8syZXJQVabSf'), ('Tek Weh Yuh Heart', ['Sean Paul', 'Tory Lanez'], 'spotify:track:3VwR0joqoloF97pCHzLVLx'), ('Hard Drive', ['Shenseea', 'Konshens', 'Rvssian'], 'spotify:track:32tsPT8yut3l2gh5qFDMos'), ('Real Bad Gal', ['Vybz Kartel'], 'spotify:track:6vPgHC8IiYBLJ4x2rR3MVX'), ('Silence', ['Popcaan'], 'spotify:track:4R9Wh4q5UKIEDuWwVDfmZr'), (\"They Don't Know\", ['Masicka'], 'spotify:track:55YsMolAhT2hrCeZDox5RF'), ('Load Up', ['Alkaline'], 'spotify:track:2EjsIKGfrb6V9oV1rJ34NM'), ('Hold You [Hold Yuh]', ['Gyptian'], 'spotify:track:7MR2EsOZadH0QaagQiHCbk'), ('Pa Mi (with Ozuna)', ['Tory Lanez', 'Ozuna'], 'spotify:track:0CYLDwvvpJQySLA5CvqvSl'), ('Easy To Love You (feat. Konshens)', ['Culan', 'Konshens'], 'spotify:track:10SH05qPt1eyUSLmWz0U0J'), (\"Cheater's Prayer\", ['Christopher Martin'], 'spotify:track:3S8CDKZYuv8BI6bGO0kaCw'), ('Dweet (Genna Bounce) [feat. Bravo]', ['Ding Dong', 'Bravo'], 'spotify:track:2KKFoM30sZjQmE75gceEXc'), ('So Mi Like It', ['Spice'], 'spotify:track:6IFDy0imCdhDpHj98GczEX'), ('Bassline', ['Konshens'], 'spotify:track:3yJdpNT2uchJ6gK6z9inIE'), ('Under Water', ['Vybz Kartel'], 'spotify:track:0WCp1Ej0DFroSlgidwiG3R'), ('Gyal You a Party Animal', ['Charly Black'], 'spotify:track:1yechgLn4utQQMgyFFRkGJ'), ('Diamond Body', ['Mavado', 'Stefflon Don'], 'spotify:track:0jhdJKIJntMVOEmc7t9UII'), ('Walking Trophy', ['HoodCelebrityy'], 'spotify:track:4hGHcdD5IwjAkftalZm5an'), ('Cheerleader - Felix Jaehn Remix Radio Edit', ['OMI', 'Felix Jaehn'], 'spotify:track:7vFoFDWqTX0mHzLfrF1Cfy'), ('Bake Bean', ['Govana'], 'spotify:track:7FAebvvbs0jIND4Plogz3T'), ('Tip Pon It', ['Sean Paul', 'Major Lazer'], 'spotify:track:22wt8Hi61HAuHIrnltZ0wF'), ('Nothing Dem Kno Have Ova Me', ['Shenseea'], 'spotify:track:6end3tzi4AoH98EOvTL9PF'), ('Life Is Real (feat. Popcaan & Padrino)', ['Jah Cure', 'Padrino', 'Popcaan'], 'spotify:track:1LCIBA1H1jzTkTmBg47AKK'), ('Contradiction (feat. Chronixx)', ['Alborosie', 'Chronixx'], 'spotify:track:4A2EuH7CRXeUpLh84TLsav'), ('Family', ['Popcaan'], 'spotify:track:1YRzgVYXnobOo68q4F6DEE'), (\"I'm Sanctify\", ['Sean Paul', 'Mavado'], 'spotify:track:2craZx4yelJCIAWE4DcRnE'), ('Land Of Sunshine', ['Beres Hammond'], 'spotify:track:0mw7PXkFS0XdFu7sUuz1SZ'), ('Meet Up (feat. Maleek Berry)', ['Estelle', 'Maleek Berry'], 'spotify:track:4x0Ieo2LOCB2QI4FvKOTGq'), ('U', ['jahmiel'], 'spotify:track:6qATUuipWzEYihTenTEtOO'), ('Father God', ['Mavado'], 'spotify:track:7DiCrKSopCcw7vmgcG7J3e'), ('Suh Different', ['Patoranking'], 'spotify:track:0vetLLyfKoVYiF2kR3wIKQ'), ('Loodi (feat. Shenseea)', ['Vybz Kartel', 'Shenseea'], 'spotify:track:7EibVLTFJrorLknJeQD7Ru'), (\"Can't Satisfy Her\", ['I Wayne'], 'spotify:track:7lE7ieF32OlXel0vwPclW9'), ('Zion Gates', ['Bunji Garlin'], 'spotify:track:4iH1njdXjF0G4au1WOkWX2'), ('Medication', ['Damian Marley', 'Stephen Marley'], 'spotify:track:2WQKHNETUytUGsD32TTNeO'), ('The Unforgiven (feat. Raging Fyah)', ['Alborosie', 'Raging Fyah'], 'spotify:track:59ZLlnNh4oAbEKouRqQ3tX'), ('Better', ['Estelle'], 'spotify:track:74G2v8bDj9DfIu8pVNBqgk'), ('Raggamuffin', ['Koffee'], 'spotify:track:30I19LolrE9kdBgt1yzwHj'), ('No Letting Go', ['Wayne Wonder'], 'spotify:track:2uUeBXNnnHYuyjZs5w7fIi'), ('LUV', ['Tory Lanez'], 'spotify:track:16Ah4QqH4mgYVXqfC4mdSd'), ('Playing Games', ['Serani'], 'spotify:track:3ANdK6jiUtEUoqX7CbiDjP'), ('Pine & Ginger', ['Amindi K. Fro$t', 'Tessellated', 'Valleyz'], 'spotify:track:7iHsUPZjmTqzog933uh5lU'), ('Inviolable', ['Popcaan'], 'spotify:track:0N6wsEAaB8FbQGQLGEJuBl'), ('Bawl Out', ['Dovey Magnum'], 'spotify:track:4P7NijPfwzPVkW9CXK4TAM'), ('Mhm Hm', ['Vybz Kartel'], 'spotify:track:4leNYY3c14f0ndO8h1NnEX'), ('Yeah Yeah', ['Aidonia'], 'spotify:track:5CnJWCAJhuFRqTG5mWZnEg'), (\"Hurtin' Me\", ['Stefflon Don', 'French Montana'], 'spotify:track:76IkF7pA7RscjDTvOFT4vb'), ('Rude', ['MAGIC!'], 'spotify:track:6RtPijgfPKROxEzTHNRiDp'), ('Just One Of Those Days', ['Sizzla'], 'spotify:track:3uvzbO9DkUIGpd0biIC30w'), ('Man Down', ['Rihanna'], 'spotify:track:1Bx0zEdVjkFlV27iKaePug'), (\"It's A Pity\", ['Tanya Stephens'], 'spotify:track:3PBJbJoaJMONnq5b1hgyIT'), ('Oh Jah Jah', ['Eddie Murphy'], 'spotify:track:7Bavtl3TKZXrVqAzaufmZ5'), ('Jiggle Jiggle', ['Gyptian'], 'spotify:track:0o0kyaU4bffEOCW0Y0r0W5'), ('Body Specialist', ['Gully Bop'], 'spotify:track:3r4RnE2LxFY8WducEpgCPz'), ('Only Man She Want', ['Popcaan'], 'spotify:track:6ql3bOC3cN9020CBOkCB1m'), ('Tight Up Skirt', ['Red Rat'], 'spotify:track:2FZ87JqdToY0N1SY586UnC'), ('Gimme The Light', ['Sean Paul'], 'spotify:track:1K1vxhcrtlYR7PSYIBzPTF'), ('Not Nice', ['PARTYNEXTDOOR'], 'spotify:track:4STaHtfguDMkWbPEo6Fwcx'), ('Walk Away From Love', ['Bitty McLean'], 'spotify:track:6n8S3aLyHWDwfA417iK9aN'), ('Come Over (Missing You) - Extended Dub Mix', ['Busy Signal'], 'spotify:track:3fYs96RfFfIDsNnnFzDEpN'), ('Love And Affection', ['Pressure'], 'spotify:track:4o6ZuLYr04LqFQNiSGVK4u'), ('Youths Dem Cold', ['Richie Spice'], 'spotify:track:6qbfmq1xQtSDALfeA7t68G'), ('Temperature', ['Sean Paul'], 'spotify:track:0WRVzCgfpPnD4aKnhh8h84'), ('Pon De River Pon De Bank', ['Elephant Man'], 'spotify:track:46l7fOJggsNqrNPJeFk0og'), ('Girls Dem Sugar', ['Beenie Man', 'Mýa'], 'spotify:track:56On2z3m8Ax1aA1TdqeBVP'), ('Dutty Wine', ['Tony Matterhorn'], 'spotify:track:7qhJoOpaJU5deLmo0MLRlz'), ('Romie', ['Beenie Man'], 'spotify:track:5ASamuvWQpQTtMbQxi261B'), ('Action', ['Terror Fabulous', 'Nadine Sutherland'], 'spotify:track:42F0eI7tFI8Xez4iqXObBt'), ('Heads High', ['Mr. Vegas'], 'spotify:track:34cyIDgEsayGHZznMyWY0e'), ('Wine Slow', ['Gyptian'], 'spotify:track:5OyrqPO3HRAmhedtgDs6fK'), ('Longing For', ['Jah Cure'], 'spotify:track:1nlrMqQKgqym5EOFqYLFuR'), (\"She's Royal\", ['Tarrus Riley'], 'spotify:track:08c8C5L1BR2DuV85gr2Uli'), ('Footprints', ['T.O.K.'], 'spotify:track:3SyYfDCCGJDP3Fw3yyYBfk'), ('Rock Away', ['Beres Hammond'], 'spotify:track:2RlVyAjLnGJQYp7uzpfUta')]\n"
      ]
     }
    ],
