--- a/Demo101.ipynb
+++ b/Demo101.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
        "(10001,)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -221,29 +221,298 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n",
-      "{'ids': ''}\n",
-      "{'audio_features': [None]}\n"
-     ]
-    },
-    {
-     "ename": "UnboundLocalError",
-     "evalue": "local variable 'duration' referenced before assignment",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-34c3b91f5e83>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;31m# playlistMetrics = helperFunctions.getSpotifyTrackInfo(spotifyIds=songIDs)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;31m# print(formattedSongList)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0msongPopularities\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhelperFunctions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetSpotifyInfoForLists\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mformattedSongList\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m \u001b[0;31m# print(songPopularities)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Desktop/yhack 2018/Song-Popularity-Predictor/helperFunctions.py\u001b[0m in \u001b[0;36mgetSpotifyInfoForLists\u001b[0;34m(trackList)\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mtrack\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtrackList\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m       \u001b[0;31m# print(track)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m       \u001b[0moutput\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgetSpotifyTrackInfo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msong_name\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrack\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0martist_name\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrack\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m       \u001b[0;31m#getSpotifyInfo\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m   \u001b[0;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrackList\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Desktop/yhack 2018/Song-Popularity-Predictor/helperFunctions.py\u001b[0m in \u001b[0;36mgetSpotifyTrackInfo\u001b[0;34m(song_name, artist_name, spotifyIds, req_type)\u001b[0m\n\u001b[1;32m     72\u001b[0m       \u001b[0mres\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrequests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'https://api.spotify.com/v1/artists/{}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0martist_id\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mheaders\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mheaders\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     73\u001b[0m       \u001b[0martist_hot\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mres\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjson\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'popularity'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 74\u001b[0;31m     return pd.to_numeric(pd.Series({'duration': duration, \n\u001b[0m\u001b[1;32m     75\u001b[0m                       \u001b[0;34m'key'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     76\u001b[0m                     \u001b[0;34m'loudness'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mloud\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mUnboundLocalError\u001b[0m: local variable 'duration' referenced before assignment"
+      "list index out of range\n",
+      "list index out of range\n",
+      "list index out of range\n",
+      "list index out of range\n",
+      "list index out of range\n",
+      "Who Am I\n",
+      "Predicted Hit Probability(according to our model): 36.22%\n",
+      "Actual Popularity (according to Spotify): 49\n",
+      "\n",
+      "Stay So\n",
+      "Predicted Hit Probability(according to our model): 26.45%\n",
+      "Actual Popularity (according to Spotify): 58\n",
+      "\n",
+      "Tek Weh Yuh Heart\n",
+      "Predicted Hit Probability(according to our model): 55.56%\n",
+      "Actual Popularity (according to Spotify): 47\n",
+      "\n",
+      "Hard Drive\n",
+      "Predicted Hit Probability(according to our model): 14.58%\n",
+      "Actual Popularity (according to Spotify): 57\n",
+      "\n",
+      "Real Bad Gal\n",
+      "Predicted Hit Probability(according to our model): 32.76%\n",
+      "Actual Popularity (according to Spotify): 46\n",
+      "\n",
+      "Silence\n",
+      "Predicted Hit Probability(according to our model): 30.83%\n",
+      "Actual Popularity (according to Spotify): 56\n",
+      "\n",
+      "They Don't Know\n",
+      "Predicted Hit Probability(according to our model): 13.75%\n",
+      "Actual Popularity (according to Spotify): 50\n",
+      "\n",
+      "Load Up\n",
+      "Predicted Hit Probability(according to our model): 28.95%\n",
+      "Actual Popularity (according to Spotify): 43\n",
+      "\n",
+      "Hold You [Hold Yuh]\n",
+      "Predicted Hit Probability(according to our model): 16.48%\n",
+      "Actual Popularity (according to Spotify): 65\n",
+      "\n",
+      "Pa Mi (with Ozuna)\n",
+      "Predicted Hit Probability(according to our model): 31.86%\n",
+      "Actual Popularity (according to Spotify): 73\n",
+      "\n",
+      "Easy To Love You (feat. Konshens)\n",
+      "Predicted Hit Probability(according to our model): 9.41%\n",
+      "Actual Popularity (according to Spotify): 28\n",
+      "\n",
+      "Cheater's Prayer\n",
+      "Predicted Hit Probability(according to our model): 10.66%\n",
+      "Actual Popularity (according to Spotify): 33\n",
+      "\n",
+      "Dweet (Genna Bounce) [feat. Bravo]\n",
+      "Predicted Hit Probability(according to our model): 12.45%\n",
+      "Actual Popularity (according to Spotify): 60\n",
+      "\n",
+      "So Mi Like It\n",
+      "Predicted Hit Probability(according to our model): 24.89%\n",
+      "Actual Popularity (according to Spotify): 47\n",
+      "\n",
+      "Bassline\n",
+      "Predicted Hit Probability(according to our model): 32.17%\n",
+      "Actual Popularity (according to Spotify): 47\n",
+      "\n",
+      "Under Water\n",
+      "Predicted Hit Probability(according to our model): 44.74%\n",
+      "Actual Popularity (according to Spotify): 70\n",
+      "\n",
+      "Gyal You a Party Animal\n",
+      "Predicted Hit Probability(according to our model): 14.81%\n",
+      "Actual Popularity (according to Spotify): 56\n",
+      "\n",
+      "Diamond Body\n",
+      "Predicted Hit Probability(according to our model): 30.37%\n",
+      "Actual Popularity (according to Spotify): 59\n",
+      "\n",
+      "Walking Trophy\n",
+      "Predicted Hit Probability(according to our model): 43.50%\n",
+      "Actual Popularity (according to Spotify): 62\n",
+      "\n",
+      "Cheerleader - Felix Jaehn Remix Radio Edit\n",
+      "Predicted Hit Probability(according to our model): 13.18%\n",
+      "Actual Popularity (according to Spotify): 42\n",
+      "\n",
+      "Bake Bean\n",
+      "Predicted Hit Probability(according to our model): 50.72%\n",
+      "Actual Popularity (according to Spotify): 58\n",
+      "\n",
+      "Tip Pon It\n",
+      "Predicted Hit Probability(according to our model): 14.09%\n",
+      "Actual Popularity (according to Spotify): 32\n",
+      "\n",
+      "Nothing Dem Kno Have Ova Me\n",
+      "Predicted Hit Probability(according to our model): 16.93%\n",
+      "Actual Popularity (according to Spotify): 34\n",
+      "\n",
+      "Life Is Real (feat. Popcaan & Padrino)\n",
+      "Predicted Hit Probability(according to our model): 17.49%\n",
+      "Actual Popularity (according to Spotify): 45\n",
+      "\n",
+      "Contradiction (feat. Chronixx)\n",
+      "Predicted Hit Probability(according to our model): 48.71%\n",
+      "Actual Popularity (according to Spotify): 52\n",
+      "\n",
+      "Family\n",
+      "Predicted Hit Probability(according to our model): 23.91%\n",
+      "Actual Popularity (according to Spotify): 28\n",
+      "\n",
+      "I'm Sanctify\n",
+      "Predicted Hit Probability(according to our model): 36.98%\n",
+      "Actual Popularity (according to Spotify): 49\n",
+      "\n",
+      "Land Of Sunshine\n",
+      "Predicted Hit Probability(according to our model): 10.02%\n",
+      "Actual Popularity (according to Spotify): 45\n",
+      "\n",
+      "Meet Up (feat. Maleek Berry)\n",
+      "Predicted Hit Probability(according to our model): 10.57%\n",
+      "Actual Popularity (according to Spotify): 38\n",
+      "\n",
+      "U\n",
+      "Predicted Hit Probability(according to our model): 18.01%\n",
+      "Actual Popularity (according to Spotify): 46\n",
+      "\n",
+      "Father God\n",
+      "Predicted Hit Probability(according to our model): 29.71%\n",
+      "Actual Popularity (according to Spotify): 32\n",
+      "\n",
+      "Suh Different\n",
+      "Predicted Hit Probability(according to our model): 15.01%\n",
+      "Actual Popularity (according to Spotify): 16\n",
+      "\n",
+      "Loodi (feat. Shenseea)\n",
+      "Predicted Hit Probability(according to our model): 47.30%\n",
+      "Actual Popularity (according to Spotify): 62\n",
+      "\n",
+      "Can't Satisfy Her\n",
+      "Predicted Hit Probability(according to our model): 26.73%\n",
+      "Actual Popularity (according to Spotify): 51\n",
+      "\n",
+      "Zion Gates\n",
+      "Predicted Hit Probability(according to our model): 42.00%\n",
+      "Actual Popularity (according to Spotify): 45\n",
+      "\n",
+      "Medication\n",
+      "Predicted Hit Probability(according to our model): 21.97%\n",
+      "Actual Popularity (according to Spotify): 40\n",
+      "\n",
+      "The Unforgiven (feat. Raging Fyah)\n",
+      "Predicted Hit Probability(according to our model): 9.62%\n",
+      "Actual Popularity (according to Spotify): 60\n",
+      "\n",
+      "Better\n",
+      "Predicted Hit Probability(according to our model): 46.60%\n",
+      "Actual Popularity (according to Spotify): 69\n",
+      "\n",
+      "Raggamuffin\n",
+      "Predicted Hit Probability(according to our model): 19.08%\n",
+      "Actual Popularity (according to Spotify): 37\n",
+      "\n",
+      "No Letting Go\n",
+      "Predicted Hit Probability(according to our model): 17.64%\n",
+      "Actual Popularity (according to Spotify): 48\n",
+      "\n",
+      "LUV\n",
+      "Predicted Hit Probability(according to our model): 38.21%\n",
+      "Actual Popularity (according to Spotify): 46\n",
+      "\n",
+      "Playing Games\n",
+      "Predicted Hit Probability(according to our model): 16.87%\n",
+      "Actual Popularity (according to Spotify): 42\n",
+      "\n",
+      "Pine & Ginger\n",
+      "Predicted Hit Probability(according to our model): 21.51%\n",
+      "Actual Popularity (according to Spotify): 47\n",
+      "\n",
+      "Inviolable\n",
+      "Predicted Hit Probability(according to our model): 12.75%\n",
+      "Actual Popularity (according to Spotify): 52\n",
+      "\n",
+      "Bawl Out\n",
+      "Predicted Hit Probability(according to our model): 59.94%\n",
+      "Actual Popularity (according to Spotify): 66\n",
+      "\n",
+      "Mhm Hm\n",
+      "Predicted Hit Probability(according to our model): 33.84%\n",
+      "Actual Popularity (according to Spotify): 75\n",
+      "\n",
+      "Yeah Yeah\n",
+      "Predicted Hit Probability(according to our model): 23.62%\n",
+      "Actual Popularity (according to Spotify): 48\n",
+      "\n",
+      "Hurtin' Me\n",
+      "Predicted Hit Probability(according to our model): 58.40%\n",
+      "Actual Popularity (according to Spotify): 59\n",
+      "\n",
+      "Rude\n",
+      "Predicted Hit Probability(according to our model): 20.11%\n",
+      "Actual Popularity (according to Spotify): 38\n",
+      "\n",
+      "Just One Of Those Days\n",
+      "Predicted Hit Probability(according to our model): 10.83%\n",
+      "Actual Popularity (according to Spotify): 47\n",
+      "\n",
+      "Man Down\n",
+      "Predicted Hit Probability(according to our model): 21.56%\n",
+      "Actual Popularity (according to Spotify): 20\n",
+      "\n",
+      "It's A Pity\n",
+      "Predicted Hit Probability(according to our model): 32.72%\n",
+      "Actual Popularity (according to Spotify): 48\n",
+      "\n",
+      "Oh Jah Jah\n",
+      "Predicted Hit Probability(according to our model): 16.99%\n",
+      "Actual Popularity (according to Spotify): 46\n",
+      "\n",
+      "Jiggle Jiggle\n",
+      "Predicted Hit Probability(according to our model): 19.70%\n",
+      "Actual Popularity (according to Spotify): 57\n",
+      "\n",
+      "Body Specialist\n",
+      "Predicted Hit Probability(according to our model): 28.82%\n",
+      "Actual Popularity (according to Spotify): 67\n",
+      "\n",
+      "Only Man She Want\n",
+      "Predicted Hit Probability(according to our model): 19.99%\n",
+      "Actual Popularity (according to Spotify): 40\n",
+      "\n",
+      "Tight Up Skirt\n",
+      "Predicted Hit Probability(according to our model): 44.67%\n",
+      "Actual Popularity (according to Spotify): 22\n",
+      "\n",
+      "Gimme The Light\n",
+      "Predicted Hit Probability(according to our model): 17.22%\n",
+      "Actual Popularity (according to Spotify): 45\n",
+      "\n",
+      "Not Nice\n",
+      "Predicted Hit Probability(according to our model): 14.17%\n",
+      "Actual Popularity (according to Spotify): 31\n",
+      "\n",
+      "Walk Away From Love\n",
+      "Predicted Hit Probability(according to our model): 40.80%\n",
+      "Actual Popularity (according to Spotify): 75\n",
+      "\n",
+      "Come Over (Missing You) - Extended Dub Mix\n",
+      "Predicted Hit Probability(according to our model): 16.03%\n",
+      "Actual Popularity (according to Spotify): 48\n",
+      "\n",
+      "Love And Affection\n",
+      "Predicted Hit Probability(according to our model): 31.48%\n",
+      "Actual Popularity (according to Spotify): 53\n",
+      "\n",
+      "Youths Dem Cold\n",
+      "Predicted Hit Probability(according to our model): 11.34%\n",
+      "Actual Popularity (according to Spotify): 43\n",
+      "\n",
+      "Temperature\n",
+      "Predicted Hit Probability(according to our model): 30.35%\n",
+      "Actual Popularity (according to Spotify): 43\n",
+      "\n",
+      "Pon De River Pon De Bank\n",
+      "Predicted Hit Probability(according to our model): 20.83%\n",
+      "Actual Popularity (according to Spotify): 50\n",
+      "\n",
+      "Girls Dem Sugar\n",
+      "Predicted Hit Probability(according to our model): 18.27%\n",
+      "Actual Popularity (according to Spotify): 54\n",
+      "\n",
+      "Dutty Wine\n",
+      "Predicted Hit Probability(according to our model): 14.80%\n",
+      "Actual Popularity (according to Spotify): 61\n",
+      "\n",
+      "Romie\n",
+      "Predicted Hit Probability(according to our model): 10.08%\n",
+      "Actual Popularity (according to Spotify): 52\n",
+      "\n",
+      "Action\n",
+      "Predicted Hit Probability(according to our model): 23.13%\n",
+      "Actual Popularity (according to Spotify): 45\n",
+      "\n",
+      "Heads High\n",
+      "Predicted Hit Probability(according to our model): 25.57%\n",
+      "Actual Popularity (according to Spotify): 46\n",
+      "\n"
      ]
     }
    ],
@@ -260,7 +529,7 @@
     "# print(songIDs)\n",
     "# playlistMetrics = helperFunctions.getSpotifyTrackInfo(spotifyIds=songIDs)\n",
     "# print(formattedSongList)\n",
-    "songPopularities = helperFunctions.getSpotifyInfoForLists(formattedSongList[0:20])\n",
+    "songPopularities = helperFunctions.getSpotifyInfoForLists(formattedSongList)\n",
     "# print(songPopularities)\n",
     "i=0\n",
     "for ser4, pop in songPopularities:\n",
@@ -268,8 +537,9 @@
     "    song4 = pd.DataFrame(ser4).transpose()\n",
     "    song4 = helperFunctions.matchOrder(correctShape= train1,incorrectShape=song4)\n",
     "    prediction2 = xgb1.predict_proba(song4)\n",
-    "    print(\"{}\\nPredicted Hit Probability(according to our model): {:.2f}%\\nActual Popularity (according to Spotify): {}\\n\".format(playList[i][0],prediction2[0][1]*100, pop))\n",
+    "    print(\"{} - {}\\nPredicted Hit Probability(according to our model): {:.2f}%\\nActual Popularity (according to Spotify): {}\\n\".format(formattedSongList[i][0],formattedSongList[i][1],prediction2[0][1]*100, pop))\n",
     "    i+=1\n",
+    "\n",
     "\n"
    ]
   },
