updated pipenv file

--- a/Demo101.ipynb
+++ b/Demo101.ipynb
@@ -144,7 +144,7 @@
    "source": [
     "#write model to file\n",
     "\n",
-    "helperFunctions.saveModel(xgb1, 'blah')"
+    "helperFunctions.saveModel(xgb1, 'model2.dat')"
    ]
   },
   {
